add a git module  in .gitmodules for persistable hashes support

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 # from `git submodule` to `git fetch` because `git submodule` takes a different
 # code path from the default case. *Even though* the submodule fetch it invokes
 # isn't shallow!
+[submodule "3rdparty/hamt"]
+	path = 3rdparty/hamt
+	url = https://github.com/cognominal/hamt-for-raku-moarvm
